--- a/src/components/About/About.module.css
+++ b/src/components/About/About.module.css
@@ -45,25 +45,33 @@
   padding: 25px;
   background-image: linear-gradient(
     90deg,
-    rgba(165, 215, 232, 0.42) 0%,
+    #0b2447 0%,
     rgba(255, 255, 255, 0) 100%
   );
   background-size: 0 100%;
   background-repeat: no-repeat;
-  transition: 0.4s;
+  transition: .7s;
 }
 
 .aboutItem:hover {
   background-size: 100% 100%;
+
 }
 
+.heading {
+  text-decoration: underline;
+  line-height: 1.5em;
+  
+}
 .aboutItem h3 {
   font-size: 25px;
   font-weight: 600;
+  letter-spacing: 1px;
 }
 
 .aboutItem p {
-  font-size: 25px;
+  font-size: 20px;
+  font-weight: 300;
 }
 
 @media screen and (max-width: 830px) {
@@ -79,6 +87,7 @@
 
   .aboutImage {
     display: none;
+    
   }
 
   .aboutItems {
