--- a/src/components/Contact/Contact.module.css
+++ b/src/components/Contact/Contact.module.css
@@ -6,14 +6,14 @@
   background-color: var(--color-secondary);
   display: flex;
   flex-direction: row;
-  justify-content: space-evenly;
+  justify-content: space-between;
   width: 100vw;
   padding: 58px 10%;
-  gap: 10px;
+  /* gap: 10px; */
 }
 
 .text h2 {
-  font-size: 80px;
+  font-size: 40px;
   font-weight: 700;
   letter-spacing: 4px;
 }
@@ -26,7 +26,7 @@
 
 .links {
   display: flex;
-  flex-direction: column;
+  /* flex-direction: column; */
   align-items: flex-start;
   list-style: none;
   gap: 26px;
@@ -41,7 +41,7 @@
 .link a {
   color: var(--color-text);
   text-decoration: none;
-  font-size: 30px;
+  font-size: 20px;
   font-weight: 400;
   letter-spacing: 1.5px;
 }
