--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -20,7 +20,7 @@
 }
 
 .title {
-  font-size: 72px;
+  font-size: 42px;
   font-weight: 900;
   margin-bottom: 33px;
   font-family: var(--font-roboto);
@@ -34,7 +34,7 @@
 }
 
 .description {
-  font-size: 30px;
+  font-size: 20px;
   font-family: var(--font-roboto);
   margin-bottom: 52px;
 }
@@ -43,11 +43,18 @@
   text-decoration: none;
   background-color: var(--color-primary);
   color: var(--color-text);
-  border-radius: 100px;
-  font-size: 30px;
+  border-radius: 10px;
+  font-size: 16px;
   font-weight: 600;
   padding: 17px 26px;
   box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.25);
+  transition: all 250ms ease;
+}
+
+.contactBtn:hover {
+  background-color: #fff;
+  color : #11133d;
+  box-shadow: 0 0 4px 10px rgba(0, 0, 0, 0.25);
 }
 
 .heroImg {
