--- a/src/vars.css
+++ b/src/vars.css
@@ -1,11 +1,11 @@
 :root {
   /* Colours */
   --color-text: #fff;
-  --color-primary: #576cbc;
-  --color-secondary: #19376d;
+  --color-primary: #000000;
+  --color-secondary: ##11133d;
   --color-dark: #0b2447;
-  --color-bg: #04152d;
+  --color-bg: #04062d;
 
   /* Fonts */
-  --font-roboto: "Roboto";
+  --font-roboto: "ubuntu Mono", ;
 }
