--- a/src/components/About/About.module.css
+++ b/src/components/About/About.module.css
@@ -58,9 +58,15 @@
 
 }
 
+.myImages {
+  height : 4em !important;
+  width : 4em !important;
+  margin-right: 1em;
+}
+
 .heading {
   text-decoration: underline;
-  line-height: 1.5em;
+  line-height: 2em;
   
 }
 .aboutItem h3 {
@@ -71,6 +77,8 @@
 
 .aboutItem p {
   font-size: 20px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-style: oblique;
   font-weight: 300;
 }
 
