--- a/src/components/Contact/Contact.module.css
+++ b/src/components/Contact/Contact.module.css
@@ -3,12 +3,14 @@
 .container {
   color: var(--color-text);
   margin-top: 120px;
-  background-color: var(--color-secondary);
+  background-color: #000;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   width: 100vw;
   padding: 58px 10%;
+  /* border : 1px solid red; */
+
   /* gap: 10px; */
 }
 
