--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -17,6 +17,24 @@
   color: var(--color-text);
 }
 
+.resume{
+  padding : 8px 12px;
+  outline: none;
+  background-color: #fff;
+  border :none;
+  border-radius: 4px;
+  color : #11133d;
+  margin: -.4em 0 0 5em;
+  cursor: pointer;
+  transition: all 300ms ease-in-out;
+}
+
+.resume:hover{
+  background-color: #000;
+  color : #fff;
+  transform: scale(1.05);
+  box-shadow: 0 0 6px 1px #acacac;
+}
 
 .menuBtn {
   display: none;
@@ -33,7 +51,7 @@
 }
 
 .menuItems a {
-  font-size: 25px;
+  font-size: 18px;
   color: var(--color-text);
   text-decoration: none;
 }
