--- a/src/vars.css
+++ b/src/vars.css
@@ -4,7 +4,7 @@
   --color-primary: #000000;
   --color-secondary: ##11133d;
   --color-dark: #0b2447;
-  --color-bg: #04062d;
+  --color-bg: #292929;
 
   /* Fonts */
   --font-roboto: "ubuntu Mono", ;
