--- a/src/components/Projects/ProjectCard.module.css
+++ b/src/components/Projects/ProjectCard.module.css
@@ -4,13 +4,14 @@
   display: flex;
   flex-direction: column;
   border-radius: 10px;
-  background: linear-gradient(180deg, #576cbc 0%, #132a53 100%);
+  /* background: linear-gradient(180deg, #576cbc 0%, #132a53 100%); */
   box-shadow: 0 16px 14px 0 #04152d;
   padding: 18px 24px !important;
   max-width: 345px;
-  border : 1px solid white;
+  /* border : 1px solid white; */
   height : 62vh;
   box-shadow: 0 0 14px 2px #dadada;
+  background-color: #1c1b1b;
 }
 
 .image {
