--- a/src/components/skills/Skills.module.css
+++ b/src/components/skills/Skills.module.css
@@ -19,13 +19,20 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+    /* padding : 1em 0; */
 }
 
 .skills {
     width: 100%;
     display: flex;
+    justify-content: space-evenly;
     flex-wrap: wrap;
     gap: 37px;
+    border: 1px solid #000;
+    padding: 1em 0;
+    margin-top: 1.5em;
+    padding-bottom: 2em;
+    border-radius: 10px;
 }
 
 .skill {
@@ -53,4 +60,19 @@
     font-size: 25px;
     font-family: var(--font-roboto);
     font-weight: 500;
+}
+
+.bottomBlur {
+    position: absolute;
+    width: 70vw;
+    height: 50vw;
+    min-width: 350px;
+    min-width: 250px;
+    top: 246px;
+    right: -25vw;
+    border-radius: 764px;
+    /* background: rgba(109, 103, 25, 0.7); */
+    filter: blur(200px);
+    z-index: 0;
+    background: #000;
 }
