resume linked changed

--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -43,13 +43,14 @@
 
 .contactBtn {
   text-decoration: none;
+  border :1px solid #fff;
   background-color: var(--color-primary);
   color: var(--color-text);
   border-radius: 10px;
   font-size: 16px;
   font-weight: 600;
   padding: 17px 26px;
-  box-shadow: 0 0 8px 1px rgba(151, 151, 151, 0.25);
+  box-shadow: 0 0 8px 1px rgba(151, 151, 151, 0.25), 0 0 8px 2px #fff inset;
   transition: all 250ms ease;
 }
 
@@ -62,6 +63,9 @@
 .heroImg {
   width: 50%;
   z-index: 1;
+  height: 55vh;
+  width: 27vw; 
+  border-radius: 50%;
 
   animation-name: floating;
   animation-duration: 3s;
